# nlp-scx

./: .venv  ai3.sh  clod.sh  pyproject.toml
stage01/crawl/: .env  .env.example  .gitignore  ai.sh  main.py  pyproject.toml
stage01/crawl/business/finance/: cninfo_service.py
stage01/crawl/business/fire/: flk_service.py  local_gov_service.py  mem_service.py
stage01/crawl/business/sa/: Sentiment Analysis Design.md  guba_service.py  传统ML全流程实践指导.md  深度学习情感分析数据指导.md  股吧数据字段调研.md  股吧爬虫开源项目调研.md  舆情与情感倾向性分析指导.md
stage01/crawl/business/stock/: a_stock_service.py
stage01/crawl/core/: __init__.py
stage01/crawl/core/client/: cninfo_client.py  eastmoney_client.py  flk_client.py  guba_client.py  local_gov_client.py  mem_client.py
stage01/crawl/core/config/: __init__.py  config.py
stage01/crawl/core/crawlers/: base.py  example.py
stage01/crawl/core/models/: __init__.py  article.py  base.py  capital_flow.py  dragon_tiger.py  enum.py  finance.py  fire.py  guba.py  kline.py
stage01/crawl/core/parsers/: extractor.py
stage01/crawl/core/pipelines/: storage.py
stage01/crawl/core/script/: cninfo_finance.py
stage01/crawl/core/service/: stock_service.py
stage01/crawl/core/utils/: checkpoint.py  db.py  (+3 more)
stage01/crawl/crawlee_data/: __init__.py  config.py
stage01/crawl/crawlee_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
stage01/crawl/docs/: AKShare交易数据Model设计文档.md  结构化数据-交易信息爬取AKShare API 清单.md  股票数据快速入门.md  财经数据结构模型设计指导.md
stage01/crawl/scripts/: sites_config.json
stage01/crawl/task01/: prd.md
stage01/crawl/tests/: test_example.py
(+100 files in other folders)
